[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Scripts/Entity1.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/Scripts/Entity2.gd" type="Script" id=3]
[ext_resource path="res://Assets/Scripts/DialogueUI.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35, 33 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 31 )

[node name="MainNode" type="Node"]

[node name="Entity1" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 305, 263 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Entity1"]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Entity1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entity1/Area2D"]
shape = SubResource( 1 )

[node name="Entity2" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 738, 261 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Entity2"]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Entity2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entity2/Area2D"]
shape = SubResource( 2 )

[node name="TitleLabel" type="Label" parent="."]
margin_left = 350.0
margin_top = 40.0
margin_right = 699.0
margin_bottom = 54.0
text = "To start the dialog click on one of the two blue entities"

[node name="DialogueUI" type="Control" parent="."]
visible = false
margin_left = 270.0
margin_top = 440.0
margin_right = 310.0
margin_bottom = 480.0
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="DialogueUI"]
margin_right = 500.0
margin_bottom = 150.0

[node name="EntityNameLabel" type="Label" parent="DialogueUI/Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 88.0
margin_bottom = 24.0
text = "Entity Name"

[node name="ContentLabel" type="RichTextLabel" parent="DialogueUI/Panel"]
margin_left = 10.0
margin_top = 30.0
margin_right = 490.0
margin_bottom = 80.0
text = "Place holder text to indicate where the content of the currently speaking entity would go."

[node name="Button" type="Button" parent="DialogueUI/Panel"]
margin_left = 12.0
margin_top = 120.0
margin_right = 24.0
margin_bottom = 140.0
text = "Continue"
[connection signal="mouse_entered" from="Entity1/Area2D" to="Entity1" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Entity1/Area2D" to="Entity1" method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="Entity2/Area2D" to="Entity2" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Entity2/Area2D" to="Entity2" method="_on_Area2D_mouse_exited"]
[connection signal="pressed" from="DialogueUI/Panel/Button" to="DialogueUI" method="_on_Button_pressed"]
